# Proyecto

./: .emv  @AutomationLog.txt  README.md  pyproject.toml
data/input/: prueba.xlsx
src/proyecto/: main.py
