[project]
name = "Proyecto"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jesuscova2803-a11y",email = "jcova84@gmail.com"},
]
dependencies = ["uiautomation>=2.0.29", "playwright>=1.60.0"]
requires-python = ">=3.14"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
